// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`🛡 Dream-State Emotional UX Snapshots should preserve emotional resonance for: "Authentication Failure" 1`] = `
{
  "message": "We couldn't verify your login details. Let’s double-check your information and try again.",
  "success": true,
  "tone": "supportive",
}
`;

exports[`🛡 Dream-State Emotional UX Snapshots should preserve emotional resonance for: "Authorization Denied" 1`] = `
{
  "message": "You don't have permission to access this area yet. If you believe this is a mistake, we're ready to help.",
  "success": true,
  "tone": "reassuring",
}
`;

exports[`🛡 Dream-State Emotional UX Snapshots should preserve emotional resonance for: "Internal Server Error" 1`] = `
{
  "message": "Something went wrong on our side. Please try again shortly — we're already working on it.",
  "success": true,
  "tone": "reassuring",
}
`;

exports[`🛡 Dream-State Emotional UX Snapshots should preserve emotional resonance for: "Maintenance Mode" 1`] = `
{
  "message": "We’re temporarily upgrading our systems to serve you better. Please try again in a little while!",
  "success": true,
  "tone": "reassuring",
}
`;

exports[`🛡 Dream-State Emotional UX Snapshots should preserve emotional resonance for: "Payload Too Large" 1`] = `
{
  "message": "The data you're sending is a little too big. Try reducing the size, and we’ll get it through!",
  "success": true,
  "tone": "supportive",
}
`;

exports[`🛡 Dream-State Emotional UX Snapshots should preserve emotional resonance for: "Rate Limit Exceeded" 1`] = `
{
  "message": "You're sending requests a little quickly. Please slow down and try again soon. We're here when you're ready!",
  "success": true,
  "tone": "empathetic",
}
`;

exports[`🛡 Dream-State Emotional UX Snapshots should preserve emotional resonance for: "Resource Not Found (404)" 1`] = `
{
  "message": "We couldn't find what you were looking for. It might have been moved — let's double-check the link together.",
  "success": true,
  "tone": "empathetic",
}
`;

exports[`🛡 Dream-State Emotional UX Snapshots should preserve emotional resonance for: "Successful API Request" 1`] = `
{
  "message": "Success! Your request was completed perfectly. Thank you!",
  "success": true,
  "tone": "uplifting",
}
`;

exports[`🛡 Dream-State Emotional UX Snapshots should preserve emotional resonance for: "Validation Error - Missing Required Field" 1`] = `
{
  "message": "It looks like you missed a required field. Let’s get that filled out together.",
  "success": true,
  "tone": "supportive",
}
`;
